[package]
name = "tubedb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15" }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-aux = { version = "3.0" }

[dev-dependencies]
tokio = { version = "1.15", features = ["macros"]}
